--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Edulearn | Responsive Education HTML5 Template</title>
     <link rel="icon" href="images/download.png" type="image/x-icon">
+
+    <link rel="stylesheet" href="vendor/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="vendor/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="sass/bootstrap-grid.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sass/style.css">
@@ -208,7 +211,84 @@
 
 
     </header>
-    <main></main>
+    <main>
+        <section id="section-carousel" class="home-slider">
+            <div class="owl-carousel owl-theme slide">
+                <div class="item"><img src="images/slide1.jpg" alt="">
+                    <div class="intro-text">
+                        <h1>WELCOME TO EDULEARN</h1>
+                        <p>
+                            Fusce sem dolor, interdum in efficitur at, faucibus nec lorem.Sed nec molestie justo. <br> Nunc quis sapien in arcu pharetra volutpat.Morbi nec vulputate dolor.
+                        </p>
+                        <div class="buttons">
+                            <button class="black-button">Read More</button>
+                            <button class="red-button">Get Started Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="item"><img src="images/slide2.jpg" alt="">
+                    <div class="intro-text">
+                        <h1>WELCOME TO EDULEARN</h1>
+                        <p>
+                            Fusce sem dolor, interdum in efficitur at, faucibus nec lorem.Sed nec molestie justo. <br> Nunc quis sapien in arcu pharetra volutpat.Morbi nec vulputate dolor.
+                        </p>
+                        <div class="buttons">
+                            <button class="black-button">Read More</button>
+                            <button class="red-button">Get Started Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="item"><img src="images/slide3.jpg" alt="">
+                    <div class="intro-text">
+                        <h1>WELCOME TO EDULEARN</h1>
+                        <p>
+                            Fusce sem dolor, interdum in efficitur at, faucibus nec lorem.Sed nec molestie justo. <br> Nunc quis sapien in arcu pharetra volutpat.Morbi nec vulputate dolor.
+                        </p>
+                        <div class="buttons">
+                            <button class="black-button">Read More</button>
+                            <button class="red-button">Get Started Now</button>
+                        </div>
+                    </div>
+
+        </section>
+        <section id="section-info-cards">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="div-icon">
+                            <i class="fa fa-american-sign-language-interpreting"></i>
+                        </div>
+                        <div>
+                            <h5>Trending Courses</h5>
+                            <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="div-icon">
+                            <i class="fa fa-book rs-animation-scale-up"></i>
+                        </div>
+                        <h5>Books & Liberary</h5>
+                        <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                    </div>
+                    <div class="col-3">
+                        <div class="div-icon">
+                            <i class="fa fa-user rs-animation-scale-up"></i>
+                        </div>
+                        <h5>Certified Teachers</h5>
+                        <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                    </div>
+                    <div class="col-3">
+                        <div class="div-icon">
+                            <i class="fa fa-graduation-cap rs-animation-scale-up"></i>
+                        </div>
+                        <h5>Certification</h5>
+                        <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
     <footer></footer>
 
     <div class="modal">
@@ -218,7 +298,9 @@
 
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="vendor/js/jquery.min.js"></script>
+    <script src="vendor/js/owl.carousel.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
     <script src="https://kit.fontawesome.com/f28891363d.js"></script>
     <script src="js/main.js"></script>
 
