--- a/index.html
+++ b/index.html
@@ -255,38 +255,112 @@
             <div class="container">
                 <div class="row">
                     <div class="col-3">
-                        <div class="div-icon">
-                            <i class="fa fa-american-sign-language-interpreting"></i>
-                        </div>
                         <div>
-                            <h5>Trending Courses</h5>
+                            <div class="div-icons">
+                                <i class="fa fa-american-sign-language-interpreting"></i>
+                            </div>
+                            <div class="div-text">
+                                <h3>Trending Courses</h3>
+                                <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="div-icons">
+                            <i class="fa fa-book rs-animation-scale-up"></i>
+                        </div>
+                        <div class="div-text">
+                            <h3>Books & Liberary</h3>
                             <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
                         </div>
                     </div>
                     <div class="col-3">
-                        <div class="div-icon">
-                            <i class="fa fa-book rs-animation-scale-up"></i>
-                        </div>
-                        <h5>Books & Liberary</h5>
-                        <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
-                    </div>
-                    <div class="col-3">
-                        <div class="div-icon">
+                        <div class="div-icons">
                             <i class="fa fa-user rs-animation-scale-up"></i>
                         </div>
-                        <h5>Certified Teachers</h5>
-                        <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                        <div class="div-text">
+                            <h3>Certified Teachers</h3>
+                            <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                        </div>
                     </div>
                     <div class="col-3">
-                        <div class="div-icon">
+                        <div class="div-icons">
                             <i class="fa fa-graduation-cap rs-animation-scale-up"></i>
                         </div>
-                        <h5>Certification</h5>
-                        <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                        <div class="div-text">
+                            <h3>Certification</h3>
+                            <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
+        </section>
+        <section id="section-aboutus">
+            <div class="container">
+                <div class="row-flex">
+
+                    <h2>About Us</h2>
+                    <p>Fusce sem dolor, interdum in fficitur at, faucibus nec lorem. Sed nec molestie justo.</p>
+                    <hr>
+
+                </div>
+                <div class="row div-row-info">
+                    <div class="col-6 div-about-video">
+                        <img src="images/about.jpg" alt="">
+                        <div class="div-playicon">
+                            <i class="fas fa-play-circle"></i>
+                        </div>
+
+                    </div>
+                    <div class="col-6 div-row-info-text">
+                        <h3>WELCOME TO EDULEARN</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                        <button class="accordion">Our History</button>
+                        <div class="panel">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        </div>
+
+                        <button class="accordion">Our Mission</button>
+                        <div class="panel">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        </div>
+
+                        <button class="accordion">Our Vision</button>
+                        <div class="panel">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="course-info">
+            <div class="container">
+
+            </div>
+        </section>
+        <section id="popular-courses">
+            <div class="container">
+                <div>
+                    <h2>OUR POPULAR COURSES</h2>
+                    <p>Fusce sem dolor, interdum in fficitur at, faucibus nec lorem. Sed nec molestie justo.</p>
+                    <hr>
+                </div>
+                <div class="row">
+                    <div class="owl-carousel col-12">
+                        <div class="col-3">
+
+                        </div>
+                        <div> Your Content </div>
+                        <div> Your Content </div>
+                        <div> Your Content </div>
+                        <div> Your Content </div>
+                        <div> Your Content </div>
+                        <div> Your Content </div>
+                    </div>
+                </div>
+
+            </div>
         </section>
     </main>
     <footer></footer>
