--- a/index.html
+++ b/index.html
@@ -714,6 +714,11 @@
         </section>
         <section id="section-experienced-staff">
             <div class="container">
+                <div class="staff-header">
+                    <h2>OUR EXPERIENCED STAFFS</h2>
+                    <p>Considering desire as primary motivation for the generation of narratives is a useful concept.</p>
+                    <hr>
+                </div>
                 <div class="row">
                     <div class="owl-carousel">
                         <div class="staff">
@@ -724,11 +729,136 @@
                                 <h3>Mr. Mahabub Alam</h3>
                                 <p>Assistant Professor</p>
                             </div>
+                            <div class="staff-overlay">
+
+                                <h3>Mr. Mahabub Alam</h3>
+                                <p>Assistant Professor</p>
+                                <hr>
+                                <p>Entrusted with planning, implementation and evaluation.</p>
+
+                            </div>
+                        </div>
+                        <div class="staff">
+                            <div class="staff-img">
+                                <img src="images/3 (1).jpg" alt="">
+                            </div>
+                            <div class="staff-info">
+                                <h3>Mr. Mahabub Alam</h3>
+                                <p>Assistant Professor</p>
+                            </div>
+                            <div class="staff-overlay">
+
+                                <h3>Mr. Mahabub Alam</h3>
+                                <p>Assistant Professor</p>
+                                <hr>
+                                <p>Entrusted with planning, implementation and evaluation.</p>
+
+                            </div>
+                        </div>
+                        <div class="staff">
+                            <div class="staff-img">
+                                <img src="images/3 (1).jpg" alt="">
+                            </div>
+                            <div class="staff-info">
+                                <h3>Mr. Mahabub Alam</h3>
+                                <p>Assistant Professor</p>
+                            </div>
+                            <div class="staff-overlay">
+
+                                <h3>Mr. Mahabub Alam</h3>
+                                <p>Assistant Professor</p>
+                                <hr>
+                                <p>Entrusted with planning, implementation and evaluation.</p>
+
+                            </div>
+                        </div>
+                        <div class="staff">
+                            <div class="staff-img">
+                                <img src="images/3 (1).jpg" alt="">
+                            </div>
+                            <div class="staff-info">
+                                <h3>Mr. Mahabub Alam</h3>
+                                <p>Assistant Professor</p>
+                            </div>
+                            <div class="staff-overlay">
+
+                                <h3>Mr. Mahabub Alam</h3>
+                                <p>Assistant Professor</p>
+                                <hr>
+                                <p>Entrusted with planning, implementation and evaluation.</p>
+
+                            </div>
+                        </div>
+                        <div class="staff">
+                            <div class="staff-img">
+                                <img src="images/3 (1).jpg" alt="">
+                            </div>
+                            <div class="staff-info">
+                                <h3>Mr. Mahabub Alam</h3>
+                                <p>Assistant Professor</p>
+                            </div>
+                            <div class="staff-overlay">
+
+                                <h3>Mr. Mahabub Alam</h3>
+                                <p>Assistant Professor</p>
+                                <hr>
+                                <p>Entrusted with planning, implementation and evaluation.</p>
+
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
+        </section>
+        <section id="section-devlopment-course">
+            <div class="container">
+
+                <h2>WEB DESIGN & DEVLOPMENT COURSE</h2>
+                <p>Fusce sem dolor, interdum in efficitur at, faucibus nec lorem.</p>
+                <hr>
+                <button>Join Now!</button>
+
+            </div>
+        </section>
+        <section id="section-news">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 news-card-lg">
+                        <div class="news-image">
+                            <img src="images/1 (2).jpg" alt="">
+                        </div>
+                        <div class="news-date">
+                            <i class="fa fa-calendar-check-o"></i>
+                            <span>June  28,  2017</span>
+                        </div>
+                        <h4>Those Other College Expenses You Aren't Thinking About</h4>
+                        <p>Blandit rutrum, erat et egestas ultricies, dolor tortor egestas enim, quiste rhoncus sem the purus eu sapien curabitur.Lorem Ipsum is therefore always free from repetitionetc.</p>
+                        <a href="#">Read More</a>
+
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-12">
+                                <div>
+                                    <img src="images/2.jpg" alt="">
+                                </div>
+                                <div>
+                                    <h4> While the lovely valley team work</h4>
+                                    <div>
+                                        <i class="fa fa-calendar-check-o"></i>
+                                        <p>June 28, 2017</p>
+                                    </div>
+                                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row"></div>
+                        <div class="row"></div>
+                    </div>
+
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
