Section news done

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-3">
-                        <div>
+                        <div class="div-icons-item">
                             <div class="div-icons">
                                 <i class="fa fa-american-sign-language-interpreting"></i>
                             </div>
@@ -266,30 +266,36 @@
                         </div>
                     </div>
                     <div class="col-3">
-                        <div class="div-icons">
-                            <i class="fa fa-book rs-animation-scale-up"></i>
-                        </div>
-                        <div class="div-text">
-                            <h3>Books & Liberary</h3>
-                            <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="div-icons">
-                            <i class="fa fa-user rs-animation-scale-up"></i>
-                        </div>
-                        <div class="div-text">
-                            <h3>Certified Teachers</h3>
-                            <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                        <div class="div-icons-item">
+                            <div class="div-icons">
+                                <i class="fa fa-book rs-animation-scale-up"></i>
+                            </div>
+                            <div class="div-text">
+                                <h3>Books & Liberary</h3>
+                                <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-3">
-                        <div class="div-icons">
-                            <i class="fa fa-graduation-cap rs-animation-scale-up"></i>
+                        <div class="div-icons-item">
+                            <div class="div-icons">
+                                <i class="fa fa-user rs-animation-scale-up"></i>
+                            </div>
+                            <div class="div-text">
+                                <h3>Certified Teachers</h3>
+                                <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                            </div>
                         </div>
-                        <div class="div-text">
-                            <h3>Certification</h3>
-                            <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                    </div>
+                    <div class="col-3">
+                        <div class="div-icons-item">
+                            <div class="div-icons">
+                                <i class="fa fa-graduation-cap rs-animation-scale-up"></i>
+                            </div>
+                            <div class="div-text">
+                                <h3>Certification</h3>
+                                <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -823,13 +829,21 @@
         </section>
         <section id="section-news">
             <div class="container">
+                <div class="row row-news-header">
+                    <div class="news-header">
+                        <h2>OUR LASTEST NEWS</h2>
+                        <p>Fusce sem dolor, interdum in efficitur at, faucibus nec lorem. Sed nec molestie justo.</p>
+                        <hr>
+
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-6 news-card-lg">
                         <div class="news-image">
                             <img src="images/1 (2).jpg" alt="">
                         </div>
                         <div class="news-date">
-                            <i class="fa fa-calendar-check-o"></i>
+                            <i class="far fa-calendar-check"></i>
                             <span>June  28,  2017</span>
                         </div>
                         <h4>Those Other College Expenses You Aren't Thinking About</h4>
@@ -839,14 +853,14 @@
                     </div>
                     <div class="col-md-6">
                         <div class="row">
-                            <div class="col-12">
-                                <div>
+                            <div class="news-card-sm">
+                                <div class="news-card-sm-image col-5">
                                     <img src="images/2.jpg" alt="">
                                 </div>
-                                <div>
+                                <div class="news-card-sm-text">
                                     <h4> While the lovely valley team work</h4>
-                                    <div>
-                                        <i class="fa fa-calendar-check-o"></i>
+                                    <div class="flex">
+                                        <i class="far fa-calendar-check"></i>
                                         <p>June 28, 2017</p>
                                     </div>
                                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</p>
