--- a/index.html
+++ b/index.html
@@ -839,20 +839,47 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 news-card-lg">
-                        <div class="news-image">
-                            <img src="images/1 (2).jpg" alt="">
+                        <div>
+                            <div class="news-image">
+                                <img src="images/1 (2).jpg" alt="">
+                            </div>
+                            <div class="news-date">
+                                <i class="far fa-calendar-check"></i>
+                                <span>June  28,  2017</span>
+                            </div>
+                            <h4>Those Other College Expenses You Aren't Thinking About</h4>
+                            <p>Blandit rutrum, erat et egestas ultricies, dolor tortor egestas enim, quiste rhoncus sem the purus eu sapien curabitur.Lorem Ipsum is therefore always free from repetitionetc.</p>
+                            <a href="#">Read More</a>
                         </div>
-                        <div class="news-date">
-                            <i class="far fa-calendar-check"></i>
-                            <span>June  28,  2017</span>
-                        </div>
-                        <h4>Those Other College Expenses You Aren't Thinking About</h4>
-                        <p>Blandit rutrum, erat et egestas ultricies, dolor tortor egestas enim, quiste rhoncus sem the purus eu sapien curabitur.Lorem Ipsum is therefore always free from repetitionetc.</p>
-                        <a href="#">Read More</a>
-
                     </div>
                     <div class="col-md-6">
                         <div class="row">
+                            <div class="news-card-sm">
+                                <div class="news-card-sm-image col-5">
+                                    <img src="images/2.jpg" alt="">
+                                </div>
+                                <div class="news-card-sm-text">
+                                    <h4> While the lovely valley team work</h4>
+                                    <div class="flex">
+                                        <i class="far fa-calendar-check"></i>
+                                        <p>June 28, 2017</p>
+                                    </div>
+                                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</p>
+                                </div>
+                            </div>
+                            <div class="news-card-sm">
+                                <div class="news-card-sm-image col-5">
+                                    <img src="images/2.jpg" alt="">
+                                </div>
+                                <div class="news-card-sm-text">
+                                    <h4> While the lovely valley team work</h4>
+                                    <div class="flex">
+                                        <i class="far fa-calendar-check"></i>
+                                        <p>June 28, 2017</p>
+                                    </div>
+                                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</p>
+                                </div>
+                            </div>
                             <div class="news-card-sm">
                                 <div class="news-card-sm-image col-5">
                                     <img src="images/2.jpg" alt="">
@@ -871,6 +898,46 @@
                         <div class="row"></div>
                     </div>
 
+                </div>
+            </div>
+        </section>
+        <section id="section-publications">
+            <div class="container">
+                <div class="row row-publications-header">
+                    <h2>OUR PUBLICATIONS</h2>
+                    <p>Fusce sem dolor, interdum in efficitur at, faucibus nec lorem. Sed nec molestie justo.</p>
+                    <hr>
+                </div>
+                <div class="row">
+                    <div class="owl-carousel">
+                        <div class="publication-carousel-item">
+                            <img src="images/2 (1).jpg" alt="">
+                            <h3>Smart Tabs x18</h3>
+                            <p>From: $85.00</p>
+                            <a href="#">Add to card</a>
+                        </div>
+                        <div class="publication-carousel-item">
+                            <img src="images/2 (1).jpg" alt="">
+                            <h3>Smart Tabs x18</h3>
+                            <p>From: $85.00</p>
+                            <a href="#">Add to card</a>
+                        </div>
+                        <div class="publication-carousel-item">
+                            <img src="images/2 (1).jpg" alt="">
+                            <h3>Smart Tabs x18</h3>
+                            <p>From: $85.00</p>
+                            <a href="#">Add to card</a>
+                        </div>
+                        <div class="publication-carousel-item">
+                            <img src="images/2 (1).jpg" alt="">
+                            <h3>Smart Tabs x18</h3>
+                            <p>From: $85.00</p>
+                            <a href="#">Add to card</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="view-more-button">
+                    <a href="#" class="view-more">View More</a>
                 </div>
             </div>
         </section>
